# pdf-form-filler

./: .env.example  .gitignore  CHANGELOG.md  EMAIL_SETUP.md  IMPLEMENTATION_SUMMARY.md  LIBREOFFICE_PDF_LABELS.md  Makefile  README.md  ROADMAP_SAAS.md  alembic.ini  debug_template_paths.py  inspect_pdf_fields.py  migrate_add_group_sharing.py  migrate_add_template_group.py  migrate_users_to_rbac.py  pyproject.toml  requirements.txt  run.sh  setup.py  update_template_cache.py
alembic/: env.py
alembic/versions/: 20251203091703_add_email_sent_to_instances.py  20251203133846_create_permission_system.py  20251204092415_add_default_values_to_templates.py  303d2cf5bd9c_add_sequence_number_to_templates.py  42d1ed04a733_add_request_number_field.py  556f18da7e48_create_template_tables.py  5d998f5509c5_convert_version_to_major_minor.py  a4bd6b148f59_add_role_and_is_approved_fields_to_users.py  ac36e64f978c_add_field_config_to_templates.py  b6bf573d4cb1_add_username_and_email_verification_.py  e36f32ca25ac_create_request_tables.py
app/: main.py  pdf_utils.py
app/templates/: download_fragment.html  fill_fields.html  upload.html
examples/: .~lock.solicitacao_compras.odt#  .~lock.solicitacao_compras_2.odt#  certificado.odt  solicitacao_compras.odt  solicitacao_compras_2.odt
src/pdf_form_filler/: __init__.py  cli.py  config.py  core.py  database.py  dependencies.py  errors.py  permissions.py
src/pdf_form_filler/api/: auth.py  requests.py  templates.py
src/pdf_form_filler/email_templates/: pdf_ready.html  pdf_ready.txt
src/pdf_form_filler/models/: __init__.py  group.py  permission.py  request.py  template.py  user.py
src/pdf_form_filler/schemas/: __init__.py  request.py  template.py  user.py
src/pdf_form_filler/services/: auth_service.py  dynamic_values.py  email_service.py  excel_service.py  request_service.py  storage_service.py  template_service.py
src/pdf_form_filler/utils/: auth.py
src/pdf_form_filler/web/: __init__.py  app.py
src/pdf_form_filler/web/routes/: admin.py  auth.py  dashboard.py  profile.py  requests.py  templates.py
src/pdf_form_filler/web/static/: style.css
src/pdf_form_filler/web/templates/: base.html  dashboard.html  download_fragment.html  fill_fields.html  pending_approval.html  profile.html  upload.html
src/pdf_form_filler/web/templates/admin/: edit_group.html  edit_user.html  groups.html  index.html  users.html
src/pdf_form_filler/web/templates/auth/: login.html  register.html  verification_failed.html  verification_success.html
src/pdf_form_filler/web/templates/requests/: batch.html  details.html  fill.html  list.html
src/pdf_form_filler/web/templates/templates/: details.html  fill_inline.html  list.html
tests/: __init__.py  conftest.py
tests/fixtures/: README.md
tests/integration/: test_web_app.py
tests/unit/: test_core.py  test_errors.py
